deploy/app/overlays/dev/image-pull-policy-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth
spec:
  template:
    spec:
      containers:
        - name: auth
          imagePullPolicy: Always
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  template:
    spec:
      containers:
        - name: backend
          imagePullPolicy: Always
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  template:
    spec:
      containers:
        - name: frontend
          imagePullPolicy: Always
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: campus-nginx
spec:
  template:
    spec:
      containers:
        - name: campus-nginx
          imagePullPolicy: Always
