deploy/app/overlays/dev/httproute-patch.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: campus
spec:
  hostnames:
    - campus-dev.10-123-127-29.sslip.io
