deploy/app/overlays/dev/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: campus
spec:
  rules:
    - host: campus-dev.192-168-50-5.sslip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: campus-nginx
                port:
                  number: 80
